--- a/deployment/applications.yaml
+++ b/deployment/applications.yaml
@@ -7,5 +7,5 @@ applications:
 #  - name: whg-staging
   - name: tileserver
 #  - name: vespa
-#  - name: wordpress
+  - name: wordpress
 #  - name: plausible
