--- a/wordpress/values.yaml
+++ b/wordpress/values.yaml
@@ -35,4 +35,24 @@ mariadb:
   PersistentVolumeClaim:
     name: pvc-mariadb
 
-secretName: whg-secret
+env:
+  - name: WORDPRESS_DB_HOST
+    valueFrom:
+      secretKeyRef:
+        name: whg-secret
+        key: wordpress-db-host
+  - name: WORDPRESS_DB_USER
+    valueFrom:
+      secretKeyRef:
+        name: whg-secret
+        key: wordpress-db-user
+  - name: WORDPRESS_DB_PASSWORD
+    valueFrom:
+      secretKeyRef:
+        name: whg-secret
+        key: wordpress-db-password
+  - name: WORDPRESS_DB_NAME
+    valueFrom:
+      secretKeyRef:
+        name: whg-secret
+        key: wordpress-db-name
