--- a/wordpress/templates/deployment.yaml
+++ b/wordpress/templates/deployment.yaml
@@ -16,7 +16,27 @@ spec:
       containers:
       - name: wordpress
         image: {{ .Values.wordpress.image }}
-        env: {{ toYaml .Values.env | nindent 10 }}
+        env:
+          - name: WORDPRESS_DB_HOST
+            valueFrom:
+              secretKeyRef:
+                name: whg-secret
+                key: wordpress-db-host
+          - name: WORDPRESS_DB_USER
+            valueFrom:
+              secretKeyRef:
+                name: whg-secret
+                key: wordpress-db-user
+          - name: WORDPRESS_DB_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: whg-secret
+                key: wordpress-db-password
+          - name: WORDPRESS_DB_NAME
+            valueFrom:
+              secretKeyRef:
+                name: whg-secret
+                key: wordpress-db-name
         imagePullPolicy: {{ .Values.wordpress.imagePullPolicy }}
         ports:
           - containerPort: 80
@@ -45,7 +65,27 @@ spec:
       containers:
       - name: mariadb
         image: {{ .Values.mariadb.image }}
-        env: {{ toYaml .Values.env | nindent 10 }}
+        env:
+          - name: MARIADB_ROOT_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: whg-secret
+                key: wordpress-db-password
+          - name: MARIADB_DATABASE
+            valueFrom:
+              secretKeyRef:
+                name: whg-secret
+                key: wordpress-db-name
+          - name: MARIADB_USER
+            valueFrom:
+              secretKeyRef:
+                name: whg-secret
+                key: wordpress-db-user
+          - name: MARIADB_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: whg-secret
+                key: wordpress-db-password
         imagePullPolicy: {{ .Values.mariadb.imagePullPolicy }}
         volumeMounts:
           - name: mariadb-data
