--- a/plausible/templates/deployments.yaml
+++ b/plausible/templates/deployments.yaml
@@ -181,12 +181,12 @@ spec:
             valueFrom:
               secretKeyRef:
                 name: {{ .Values.secret.existingSecretName }}
-                key: plausible-smtp-host
+                key: plausible-smtp-host-addr
           - name: SMTP_PORT
             valueFrom:
               secretKeyRef:
                 name: {{ .Values.secret.existingSecretName }}
-                key: plausible-smtp-port
+                key: plausible-smtp-host-port
           - name: SMTP_USER
             valueFrom:
               secretKeyRef:
