--- a/plausible/templates/deployments.yaml
+++ b/plausible/templates/deployments.yaml
@@ -31,11 +31,11 @@ spec:
         image: {{ .Values.postgres.image }}
         imagePullPolicy: {{ .Values.postgres.imagePullPolicy }}
         env:
-          - name: POSTGRES_PASSWORD
+          - name: DATABASE_URL
             valueFrom:
               secretKeyRef:
                 name: {{ .Values.secret.existingSecretName }}
-                key: plausible-postgres-password
+                key: plausible-database-url
         ports:
           - containerPort: {{ .Values.postgres.service.port }}
         volumeMounts:
@@ -82,6 +82,12 @@ spec:
         envFrom:
           - configMapRef:
               name: plausible-config
+        env:
+          - name: CLICKHOUSE_DATABASE_URL
+            valueFrom:
+              secretKeyRef:
+                name: {{ .Values.secret.existingSecretName }}
+                key: plausible-clickhouse-url
         ports:
           - containerPort: 8123
         volumeMounts:
