--- a/tileserver/templates/tileserver-gl-deployment.yaml
+++ b/tileserver/templates/tileserver-gl-deployment.yaml
@@ -43,7 +43,7 @@ spec:
           volumeMounts:
             - name: {{ .Values.pv.repository.name }}
               mountPath: {{ .Values.pv.repository.mountPath }}
-            - name: tiles
+            - name: nfs-volume
               mountPath: {{ .Values.pv.tiles.mountPath }}
               subPath: tiles
       containers:
@@ -77,7 +77,7 @@ spec:
         ports:
         - containerPort: {{ .Values.service.tileserver.port }}
         volumeMounts:
-        - name: tiles
+        - name: nfs-volume
           mountPath: /mnt/data/tiles
           subPath: tiles
         - name: {{ .Values.pv.repository.name }}
@@ -122,13 +122,13 @@ spec:
           value: "http://vespa-api.{{ .Values.vespa.namespace }}.svc.cluster.local:8082"
         resources: {{ toYaml .Values.tileapi.resources | nindent 10 }}
         volumeMounts:
-        - name: tiles
+        - name: nfs-volume
           mountPath: /mnt/data/tiles
           subPath: tiles
         - name: {{ .Values.pv.repository.name }}
           mountPath: {{ .Values.pv.repository.mountPath }}
       volumes:
-      - name: tiles
+      - name: nfs-volume
         persistentVolumeClaim:
           claimName: nfs-pvc
       - name: {{ .Values.pv.repository.name }}
