--- a/plausible/templates/deployments.yaml
+++ b/plausible/templates/deployments.yaml
@@ -31,8 +31,8 @@ spec:
         image: {{ .Values.postgres.image }}
         imagePullPolicy: {{ .Values.postgres.imagePullPolicy }}
         securityContext:
-          runAsUser: 999 # UID of 'postgres' user inside image: essential to prevent failure through attempted chown of NFS
-          runAsGroup: 999
+          runAsUser: 11001 # essential to prevent failure through attempted chown of NFS
+          runAsGroup: 16604
         envFrom:
           - configMapRef:
               name: plausible-config
