--- a/plausible/templates/deployments.yaml
+++ b/plausible/templates/deployments.yaml
@@ -30,6 +30,9 @@ spec:
       - name: postgres
         image: {{ .Values.postgres.image }}
         imagePullPolicy: {{ .Values.postgres.imagePullPolicy }}
+        securityContext:
+          runAsUser: 999 # essential to prevent failure through attempted chown of NFS
+          runAsGroup: 999
         envFrom:
           - configMapRef:
               name: plausible-config
