--- a/tileserver/templates/tippecanoe-job-role.yaml
+++ b/tileserver/templates/tippecanoe-job-role.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   namespace: {{ .Values.namespace }}
-  name: tippecanoe-job-role
+  name: tippecanoe-job-role-{{ .Values.namespace }}
 rules:
 - apiGroups: ["batch"]
   resources: ["jobs"]
@@ -19,5 +19,5 @@ subjects:
   namespace: {{ .Values.namespace }}
 roleRef:
   kind: Role
-  name: tippecanoe-job-role
+  name: tippecanoe-job-role-{{ .Values.namespace }}
   apiGroup: rbac.authorization.k8s.io
