--- a/plausible/templates/deployments.yaml
+++ b/plausible/templates/deployments.yaml
@@ -27,15 +27,15 @@ spec:
         {{- toYaml .Values.pod.tolerations | nindent 8 }}
       {{- end }}
       securityContext:
-        fsGroup: 16604  # Postgres GID inside the container
+        fsGroup: 0
       containers:
       - name: postgres
         image: {{ .Values.postgres.image }}
-        command: ["sleep", "infinity"]
+{{/*        command: ["sleep", "infinity"]*/}}
         imagePullPolicy: {{ .Values.postgres.imagePullPolicy }}
         securityContext:
-          runAsUser: 11001   # your host UID
-          runAsGroup: 16604  # your host GID
+          runAsUser: 0
+          runAsGroup: 0
         envFrom:
           - configMapRef:
               name: plausible-config
