--- a/plausible/templates/plausible-configmap.yaml
+++ b/plausible/templates/plausible-configmap.yaml
@@ -15,6 +15,8 @@ data:
   SMTP_HOST_SSL_ENABLED: "true"
   BASE_URL: "https://analytics.whgazetteer.org"
   POSTGRES_PASSWORD: "postgres" # Security is not a concern here since DB is not exposed
+  POSTGRES_INITDB_ARGS: "--nosync"
+  PGDATA: "/var/lib/postgresql/data"
   CLICKHOUSE_RUN_AS_ROOT: "1"
   CLICKHOUSE_DO_NOT_CHOWN: "1"
   CLICKHOUSE_SKIP_USER_SETUP: "1"
