--- a/plausible/templates/deployments.yaml
+++ b/plausible/templates/deployments.yaml
@@ -33,10 +33,11 @@ spec:
         image: {{ .Values.postgres.image }}
 {{/*        command: ["sleep", "infinity"]*/}}
         command: ["/custom-entrypoint/postgres-root-entrypoint.sh"]
+        args: ["postgres", "-c", "shared_buffers=256MB"]
         imagePullPolicy: {{ .Values.postgres.imagePullPolicy }}
         securityContext:
-          runAsUser: 999
-          runAsGroup: 999
+          runAsUser: 0
+          runAsGroup: 0
         envFrom:
           - configMapRef:
               name: plausible-config
