--- a/plausible/templates/services.yaml
+++ b/plausible/templates/services.yaml
@@ -18,7 +18,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: plausible-postgres
+  name: plausible_db
   namespace: {{ .Values.namespace }}
 spec:
   type: {{ .Values.postgres.service.type }}
