--- a/plausible/templates/plausible-configmap.yaml
+++ b/plausible/templates/plausible-configmap.yaml
@@ -14,11 +14,15 @@ data:
   SMTP_USER_NAME: "no.reply.whgazetteer@gmail.com"
   SMTP_HOST_SSL_ENABLED: "true"
   BASE_URL: "https://analytics.whgazetteer.org"
+  POSTGRES_HOST: "plausible-postgres"
+  POSTGRES_DB: "postgres"
+  POSTGRES_USER: "postgres"
   POSTGRES_PASSWORD: "postgres" # Security is not a concern here since DB is not exposed
   POSTGRES_INITDB_ARGS: "--nosync --allow-group-access --auth-host=scram-sha-256 --auth-local=trust"
   POSTGRES_INITDB_SKIP_CHOWN: "1"
   PGUSER: "root"
   PGDATA: "/var/lib/postgresql/data"
+  DATABASE_URL: "postgresql://postgres:postgres@plausible-postgres:5432/postgres"
   CLICKHOUSE_RUN_AS_ROOT: "1"
   CLICKHOUSE_DO_NOT_CHOWN: "1"
   CLICKHOUSE_SKIP_USER_SETUP: "1"
